force-app/main/default/objects/Product2/fields/DGSample__Is_Sample__c.field-meta.xml
<CustomField>
    <fullName>DGSample__Is_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>