force-app/main/default/objects/Product2/fields/DGSample__Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>DGSample__Stock_Status__c</fullName>
    <label>Stock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Stock</fullName>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>No Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>