force-app/main/default/objects/Product2/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>This Field gives information about the Release Date of the product.</description>
    <inlineHelpText>This Field gives information about the Release Date of the product.</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>